--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
         <div class="masu3x3 masu-cell" v-for="cell in block"
           v-bind:class="{
             'color-reached-cell': cell.reachedNo != 0,
-            'color-selected': cell.id == selectedCellId
+            'color-selected': cell.index == selectedCellIndex
           }"
-          :id="`cell-${cell.id}`"
           @click="cellClick(cell)">
           <!-- マスの中の数字 -->
           <div class="masu-cell-number center-middle">
@@ -60,12 +59,12 @@
       cells: [],
       blocks: [],
       numbers: [1, 2, 3, 4, 5, 6, 7, 8, 9],
-      selectedCellId: null
+      selectedCellIndex: null
     },
     created() {
       this.cells = Array(9 * 9).fill().map((_, idx) => {
         return {
-          id: idx,
+          index: idx,
           value: null,
           koho: new Set(this.numbers),
           reachedNo: 0
@@ -93,19 +92,19 @@
           cell.reachedNo = 0;
         }
 
-        if (this.selectedCellId === cell.id) {
-          this.selectedCellId = null;
+        if (this.selectedCellIndex === cell.index) {
+          this.selectedCellIndex = null;
         } else {
-          this.selectedCellId = cell.id;
+          this.selectedCellIndex = cell.index;
         }
       },
       keydown(e) {
-        const cell = (this.selectedCellId !== null) ? this.cells[this.selectedCellId] : null;
+        const cell = (this.selectedCellIndex !== null) ? this.cells[this.selectedCellIndex] : null;
         if (cell && "1" <= e.key && e.key <= "9") {
           // 数字設定
           const n = parseInt(e.key);
           if (cell.value) {
-            if (inspectCells(this.cells, cell.id, n)) {
+            if (inspectCells(this.cells, cell.index, n)) {
               cell.value = n;
               updateKoho(this.cells);
             } else {
@@ -121,19 +120,19 @@
           }
         } else if (e.key.startsWith("Arrow")) {
           // 選択マス移動
-          if (this.selectedCellId !== null) {
+          if (this.selectedCellIndex !== null) {
             if (e.key == "ArrowLeft") {
-              this.selectedCellId += (this.selectedCellId % 9 == 0) ? +8 : -1;
+              this.selectedCellIndex += (this.selectedCellIndex % 9 == 0) ? +8 : -1;
             } else if (e.key == "ArrowRight") {
-              this.selectedCellId += (this.selectedCellId % 9 == 8) ? -8 : +1;
+              this.selectedCellIndex += (this.selectedCellIndex % 9 == 8) ? -8 : +1;
             } else if (e.key == "ArrowUp") {
-              this.selectedCellId += (Math.floor(this.selectedCellId / 9) == 0) ? +(8 * 9) : -9;
+              this.selectedCellIndex += (Math.floor(this.selectedCellIndex / 9) == 0) ? +(8 * 9) : -9;
             } else if (e.key == "ArrowDown") {
-              this.selectedCellId += (Math.floor(this.selectedCellId / 9) == 8) ? -(8 * 9) : +9;
+              this.selectedCellIndex += (Math.floor(this.selectedCellIndex / 9) == 8) ? -(8 * 9) : +9;
             } else {
             }
           } else {
-            this.selectedCellId = 40;
+            this.selectedCellIndex = 40;
           }
         } else if (cell && e.key == "Delete") {
           // 数字削除
@@ -144,9 +143,9 @@
       },
       flashSelection() {
         // 選択マスをピカッと
-        const id = this.selectedCellId;
-        this.selectedCellId = null;
-        setTimeout(() => this.selectedCellId = id, 100);
+        const idx = this.selectedCellIndex;
+        this.selectedCellIndex = null;
+        setTimeout(() => this.selectedCellIndex = idx, 100);
       }
     }
   });
@@ -185,7 +184,7 @@
     for (let y = 0; y < 9; ++y) {
       for (let x = 0; x < 9; ++x) {
         const cell = cells[xyToIndex(x, y)];
-        cell.koho = getKohoSet(cells, cell.id);
+        cell.koho = getKohoSet(cells, cell.index);
         if (cell.koho.size == 1) {
           cell.reachedNo = cell.koho.values().next().value;
         }
@@ -231,7 +230,7 @@
     const cell = cells[cellIndex];
     if (!cell.value) {
       for (let n = 1; n <= 9; ++n) {
-        if (inspectCells(cells, cell.id, n)) {
+        if (inspectCells(cells, cell.index, n)) {
           koho.push(n);
         }
       }
