Make to clear selection with esc key

--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
           // 数字削除
           cell.value = null;
           updateKoho(this.cells);
+        } else if (e.key == "Escape") {
+          this.selectedCellIndex = null;
         } else {
         }
       },
